KVH/mykvh/Email-to-anything/objects/Queued_Email_Message__c.object
<CustomObject>
    <description>Queued unmtached email messages</description>
    <fields>
        <fullName>Bcc_Address__c</fullName>
        <description>Bcc addresses</description>
        <label>Bcc Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cc_Address__c</fullName>
        <description>Cc addresses</description>
        <label>Cc Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Services_Function__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Email services function id</description>
        <label>Email Rule</label>
        <referenceTo>Email_Services_Function__c</referenceTo>
        <relationshipLabel>e2a Unmatched Emails</relationshipLabel>
        <relationshipName>Queued_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>Exception Message</description>
        <label>Exception Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <description>From address</description>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <description>From name</description>
        <label>From Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email has an attachment</description>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <description>Internet message headers of incoming email</description>
        <label>Headers</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Html_Body__c</fullName>
        <description>Email body in html format</description>
        <label>Html Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoming__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email was received</description>
        <label>Incoming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Message date</description>
        <label>Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message_Id__c</fullName>
        <label>Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_From_Address__c</fullName>
        <label>New From Address</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for being queued</description>
        <label>Reason Not Matched</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unmatched Thread ID, Insert Not Allowed</fullName>
                </value>
                <value>
                    <fullName>Insert Not Allowed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Email Services Configuration Not Found</fullName>
                </value>
                <value>
                    <fullName>Email Services Configuration Incomplete</fullName>
                </value>
                <value>
                    <fullName>Matched Thread ID But No Custom Email Storage Object Defined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Email subject</description>
        <label>Subject</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Body__c</fullName>
        <description>Email plain text body</description>
        <label>Text Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <description>Email recipient&apos;s address</description>
        <label>To Address</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>e2a Unmatched Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>From_Address__c</columns>
        <columns>Message_Date__c</columns>
        <columns>Email_Services_Function__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Unmatched Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>